--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ flask-wtf==0.14.3
 flask_sqlalchemy==2.4.4
 https://www.facebook.com/photo/?fbid=101065468925179&set=a.101065495591843 lydumuh
 https://www.youtube.com/watch?v=k4h9TLqv5wc to implement function logic using RoM 
+/bin/python3.9 -m pip install -U autopep8
+Collecting autopep8
+  Downloading autopep8-1.6.0-py2.py3-none-any.whl (45 kB)
+Successfully installed autopep8-1.6.0 pycodestyle-2.8.0 toml-0.10.2  formatter for formatting
+
